@@ -13,24 +13,26 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import school.hei.haapi.endpoint.rest.mapper.ExamMapper;
 import school.hei.haapi.endpoint.rest.model.CrupdateExam;
-import school.hei.haapi.endpoint.rest.model.ExamInfo;
+import school.hei.haapi.endpoint.rest.model.Exam;
 import school.hei.haapi.endpoint.rest.model.StudentExamGrade;
 import school.hei.haapi.model.BoundedPageSize;
 import school.hei.haapi.model.PageFromOne;
 import school.hei.haapi.model.exception.NotImplementedException;
-import school.hei.haapi.service.AwardedCourseService;
+import school.hei.haapi.service.CourseAssignmentService;
 import school.hei.haapi.service.ExamService;
+import school.hei.haapi.service.GradeService;
 
 @RestController
 @AllArgsConstructor
 public class ExamController {
   private final ExamService examService;
-  private final AwardedCourseService awardedCourseService;
+  private final CourseAssignmentService courseAssignmentService;
   private final ExamMapper examMapper;
+  private final GradeService gradeService;
 
-  @GetMapping("/awarded_courses/{awarded_course_id}/exams")
-  public List<ExamInfo> getExamsByAwardedCourse(
-      @PathVariable(name = "awarded_course_id") String id,
+  @GetMapping("/course_assignments/{course_assignment_id}/exams")
+  public List<Exam> getExamsByAwardedCourse(
+      @PathVariable(name = "course_assignment_id") String id,
       @RequestParam(value = "page", defaultValue = "1") PageFromOne page,
       @RequestParam(value = "page_size", defaultValue = "15") BoundedPageSize pageSize) {
     // TODO: Review this part, why it has test and passed then now this resources disapeared and
@@ -39,7 +41,7 @@ public class ExamController {
   }
 
   @GetMapping("/exams")
-  public List<ExamInfo> getAllExams(
+  public List<Exam> getAllExams(
       @RequestParam(value = "page", defaultValue = "1") PageFromOne page,
       @RequestParam(value = "page_size", defaultValue = "15") BoundedPageSize pageSize,
       @RequestParam(value = "title", required = false) String title,
@@ -47,7 +49,7 @@ public class ExamController {
       @RequestParam(value = "group_ref", required = false) String groupRef,
       @RequestParam(value = "examination_date_from", required = false) Instant examinationDateFrom,
       @RequestParam(value = "examination_date_to", required = false) Instant examinationDateTo,
-      @RequestParam(value = "awarded_course_id", required = false) String awardedCourseId) {
+      @RequestParam(value = "course_assignment_id", required = false) String courseAssignmentId) {
     return examMapper.toRestList(
         examService.getAllExams(
             page,
@@ -57,65 +59,52 @@ public class ExamController {
             groupRef,
             examinationDateFrom,
             examinationDateTo,
-            awardedCourseId));
+            courseAssignmentId));
   }
 
   @GetMapping("/exams/{id}")
-  public ExamInfo getExam(@PathVariable(name = "id") String id) {
+  public Exam getExam(@PathVariable(name = "id") String id) {
     return examMapper.toRest(examService.getExamById(id));
   }
 
   @PutMapping("/exams")
-  public ExamInfo createOrUpdateExamsInfos(@RequestBody CrupdateExam examInfo) {
+  public Exam createOrUpdateExamsInfos(@RequestBody CrupdateExam examInfo) {
     return examMapper.toRest(
         examService.updateOrSaveAll(List.of(examMapper.toDomain(examInfo))).getFirst());
   }
 
-  @GetMapping(value = "/groups/{group_id}/awarded_courses/{awarded_course_id}/exams")
-  public List<ExamInfo> getAwardedCourseExams(
-      @PathVariable("group_id") String groupId,
-      @PathVariable("awarded_course_id") String awardedCourseId,
-      @RequestParam(value = "page", defaultValue = "1") PageFromOne page,
-      @RequestParam(value = "page_size", defaultValue = "15") BoundedPageSize pageSize) {
-    return examService
-        .getExamsFromAwardedCourseIdAndGroupId(groupId, awardedCourseId, page, pageSize)
-        .stream()
-        .map(examMapper::toRest)
-        .collect(toList());
-  }
-
-  @PutMapping(value = "/awarded_courses/{awarded_course_id}/exams")
-  public List<ExamInfo> createOrUpdateExams(
-      @PathVariable("awarded_course_id") String awardedCourseId,
-      @RequestBody List<ExamInfo> examInfos) {
+  @PutMapping(value = "/course_assignments/{course_assignment_id}/exams")
+  public List<Exam> createOrUpdateExams(
+      @PathVariable("course_assignment_id") String courseAssignmentId,
+      @RequestBody List<Exam> examInfos) {
     return examService
         .updateOrSaveAll(
             examInfos.stream()
                 .map(
                     examInfo ->
                         examMapper.toDomain(
-                            examInfo, awardedCourseService.findById(awardedCourseId)))
+                            examInfo,
+                            courseAssignmentService.getCourseAssignmentById(courseAssignmentId)))
                 .collect(toList()))
         .stream()
         .map(examMapper::toRest)
-        .collect(toList());
+        .toList();
   }
 
-  @GetMapping(value = "/groups/{group_id}/awarded_courses/{awarded_course_id}/exams/{exam_id}")
-  public ExamInfo getExamById(
-      @PathVariable("group_id") String groupId,
-      @PathVariable("awarded_course_id") String awardedCourseId,
+  // TODO: remove the unnecessary path variables
+  @GetMapping(value = "/course_assignments/{course_assignment_id}/exams/{exam_id}")
+  public Exam getExamById(
+      @PathVariable("course_assignment_id") String courseAssignmentId,
       @PathVariable("exam_id") String examId) {
-    return examMapper.toRest(
-        examService.getExamsByIdAndGroupIdAndAwardedCourseId(examId, awardedCourseId, groupId));
+    return examMapper.toRest(examService.getExamById(examId));
   }
 
   @GetMapping(value = "/courses/{course_id}/student/{student_id}/exams/grades")
   public List<StudentExamGrade> getStudentExamsGrade(
       @PathVariable(value = "course_id") String courseId,
       @PathVariable(value = "student_id") String studentId) {
-    return examService.getExamsByCourseId(courseId).stream()
-        .map(exam -> examMapper.toRestStudentExamGrade(studentId, exam))
+    return gradeService.getGradesByStudentAndCourseId(studentId, courseId).stream()
+        .map(examMapper::toRestStudentExamGrade)
         .toList();
   }
 }
